# DAMOCLES

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: theory.md  verification.md
examples/: ac3314_test_case.py  al2024_skin_panel.yaml  al7075_skin_panel.yaml  coin_grating.py  ti64_disk_bore.yaml
src/damocles/: __init__.py  ac3314.py  cli.py  materials.py  nasgro.py  newman_raju.py  plots.py  study.py
src/damocles/data/: ac3314_anomalies.json  ac3314_pod.json  materials.json
src/damtol/: __init__.py  allowables.py  cli.py  fracture.py  inspection.py
src/pdts/: __init__.py  ac3314.py  cli.py  fracture.py  materials.py  sensitivity.py  study.py
tests/: test_ac3314.py  test_allowables.py  test_coin_grating.py  test_fracture.py  test_inspection.py  test_materials.py  test_nasgro.py  test_newman_raju.py  test_random_vars.py  test_reliability.py  test_sampling.py  test_sensitivity.py  test_spectrum.py  test_study.py
