[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "damocles"
version = "0.2.0"
description = "Damage tolerance Monte Carlo: NASGRO crack growth, Newman-Raju SIFs, POD-based inspection planning, and the FAA AC 33.14-1 calibration test case inside the published acceptance bands"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alexandros Marinopoulos", email = "alexandros.marino@gmail.com" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
damocles = "damocles.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
damocles = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
